books/projects/rac/tests/yaml_test/data_types/global-mutable.ref.stderr
global-mutable.cpp:3 (6-7): syntax error, unexpected '=', expecting '('
  3 | int a = 2;
    |       ^
